--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -1,18 +1,20 @@
 name: Cypress Tests
 
-on: push
+on: [push]
 
-on: schedule
- cron: '1 1 * * 3'
+# on: schedule
+ # cron: '1 1 * * 3'
 
 jobs:
   cypress-run:
-    runs-on: chrome
+    runs-on: ubuntu-latest
     steps:
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
+      - name: Checkout
+        uses: actions/checkout@v4
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
-          build: npm run build
           start: npm start
+  #        record: true
+   #       env:
+   #         CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
