--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with:
+          build: npm run build
           start: npm start
   #        record: true
    #       env:
