re-enabled scripts found on forum

--- a/package.json
+++ b/package.json
@@ -171,12 +171,12 @@
     "cypress": "^13.7.0"
   },
   "scripts": {
-//    "dev": "next dev",
-    //"build": "next build",
-   // "start": "next start",
-  //  "lint": "next lint",
-//    "cypress:open": "cypress open",
- //   "cypress:run": "cypress run"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "keywords": [
     "e2e",
