--- a/.github/workflows/GithubActions.yml
+++ b/.github/workflows/GithubActions.yml
@@ -1,7 +1,6 @@
 name: End-to-end tests
 on: push
-on: schedule
-    # runs tests every day at 6pm
+on: schedule       # runs tests every day at 6pm
     - cron: '0 18 * * *'
 
 jobs:
